add_subdirectory(allocator)
add_subdirectory(audio)
add_subdirectory(base)
add_subdirectory(container)
add_subdirectory(debug)
add_subdirectory(entity)
add_subdirectory(gui)
add_subdirectory(input)
add_subdirectory(math)
add_subdirectory(physics)
add_subdirectory(platform)
add_subdirectory(render)
add_subdirectory(resource)
add_subdirectory(scripting)
add_subdirectory(state)

add_sources(GameEngine.cpp)